--- a/wordpress-mysql/compose.yaml
+++ b/wordpress-mysql/compose.yaml
@@ -6,7 +6,7 @@ services:
     #image: mysql:8.0.27
     command: '--default-authentication-plugin=mysql_native_password'
     volumes:
-      - db_data:/var/lib/mysql
+      - ./db_data:/var/lib/mysql
     restart: always
     environment:
       - MYSQL_ROOT_PASSWORD=somewordpress
@@ -27,6 +27,7 @@ services:
       - WORDPRESS_DB_PASSWORD=wordpress
       - WORDPRESS_DB_NAME=wordpress
 volumes:
+  - ./wp_content:/var/www/html/wp-content
   db_data:
 
   
