--- a/wordpress-mysql/compose.yaml
+++ b/wordpress-mysql/compose.yaml
@@ -1,9 +1,6 @@
 services:
   db:
-    # We use a mariadb image which supports both amd64 & arm64 architecture
     image: mariadb:10.6.4-focal
-    # If you really want to use MySQL, uncomment the following line
-    #image: mysql:8.0.27
     command: '--default-authentication-plugin=mysql_native_password'
     volumes:
       - ./db_data:/var/lib/mysql
@@ -13,22 +10,18 @@ services:
       - MYSQL_DATABASE=wordpress
       - MYSQL_USER=wordpress
       - MYSQL_PASSWORD=wordpress
-    expose:
-      - 3306
-      - 33060
+
   wordpress:
     image: wordpress:latest
+    depends_on:
+      - db
     ports:
-      - 80:80
+      - "80:80"      # use "8080:80" on PWD
     restart: always
     environment:
       - WORDPRESS_DB_HOST=db
       - WORDPRESS_DB_USER=wordpress
       - WORDPRESS_DB_PASSWORD=wordpress
       - WORDPRESS_DB_NAME=wordpress
-volumes:
-  - ./wp_content:/var/www/html/wp-content
-  db_data:
-
-  
-    
+    volumes:
+      - ./wp_content:/var/www/html/wp-content
