--- a/wordpress-mysql/compose.yaml
+++ b/wordpress-mysql/compose.yaml
@@ -16,7 +16,7 @@ services:
     depends_on:
       - db
     ports:
-      - "80:80"      # use "8080:80" on PWD
+      - "80:80"     # or "8080:80" in PWD
     restart: always
     environment:
       - WORDPRESS_DB_HOST=db
