--- a/wordpress-mysql/compose.yaml
+++ b/wordpress-mysql/compose.yaml
@@ -2,30 +2,28 @@ services:
   db:
     image: mariadb:10.6.4-focal
     command: '--default-authentication-plugin=mysql_native_password'
-    volumes:
-      - ./db_data:/var/lib/mysql          # <-- bind mount (host folder)
     restart: always
     environment:
       - MYSQL_ROOT_PASSWORD=somewordpress
       - MYSQL_DATABASE=wordpress
       - MYSQL_USER=wordpress
       - MYSQL_PASSWORD=wordpress
+    volumes:
+      - ./db_data:/var/lib/mysql          # BIND MOUNT
 
   wordpress:
     image: wordpress:latest
     depends_on:
       - db
+    restart: always
     ports:
       - "80:80"                           # use "8080:80" on PWD if needed
-    restart: always
     environment:
-      - WORDPRESS_DB_HOST=db
+      - WORDPRESS_DB_HOST=db:3306
       - WORDPRESS_DB_USER=wordpress
       - WORDPRESS_DB_PASSWORD=wordpress
       - WORDPRESS_DB_NAME=wordpress
     volumes:
-      - ./wp_content:/var/www/html/wp-content   # <-- bind mount
+      - ./wp_content:/var/www/html/wp-content   # BIND MOUNT
 
-# ⛔️ REMOVE this if present:
-# volumes:
-#   db_data:
+# ⛔️ Do NOT add a top-level `volumes:` section here
